fix: move floater up to 136px to avoid covering X icons

--- a/extension/styles.css
+++ b/extension/styles.css
@@ -57,7 +57,7 @@
 
 #cao-floater {
   position: fixed;
-  bottom: 76px;
+  bottom: 136px;
   right: 16px;
   z-index: 999999;
   width: 40px;
